--- a/src/View/FormClinicalHistoryManagement.form
+++ b/src/View/FormClinicalHistoryManagement.form
@@ -7,9 +7,9 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Configuraci&#xf3;n de la Empresa"/>
+    <Property name="title" type="java.lang.String" value="Gesti&#xf3;n de Historial Cl&#xed;nico"/>
     <Property name="frameIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-      <Image iconType="3" name="/settings_20px.png"/>
+      <Image iconType="3" name="/hc_20px.png"/>
     </Property>
   </Properties>
   <SyntheticProperties>
