Se generó la Abstracción de las clases Patient y User, de esta forma Pasaron a Extender la Super clase Person, Se completó la documentación correspondiente de los paquetes Model y Controller.

--- a/src/View/FormPatientsManagement.form
+++ b/src/View/FormPatientsManagement.form
@@ -783,7 +783,7 @@
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/search_20px.png"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Buscar y Actualizar"/>
+                    <Property name="text" type="java.lang.String" value="Buscar un Paciente"/>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
